# $Id$

2007-03-16	Konstantin V. Arkhipov

	* meta/: includes implemented.

2007-03-15	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: now accepts Criteria instance for
	filtering/ordering instead of OrderBy.

2007-03-14	Konstantin V. Arkhipov

	* meta/: stale files removing implemented.

2007-03-12	Konstantin V. Arkhipov

	* meta/: syntax checking for generated classes implemented.

2007-03-11	Konstantin V. Arkhipov

	* main/Containers/Unified/: moved to main/UnifiedContainer/.

	* main/Containers/Storable/: bye-bye.

	* meta/types/: Inet type implemented.

	* meta/: mysterious 'table per class hierarchy' implemented.

	* main/Base/LightMetaProperty.class.php: no more setters, since it's
	an immutable one.

	* meta/: new switched implemented for build script: --only-containers,
	--no-schema, --no-schema-check, --force; also automagically searches
	for configuration files now.

2007-03-10	Anton E. Lebedevich

	* core/OSQL/SQLFunction.class.php: aggregate modifier support added.

	* main/Criteria/Projections/DistinctCountProjection.class.php,
	main/Criteria/Projection.class.php: 'count(distinct ...)' projection
	added.

	* core/Form/Filters/CompressWhitespaceFilter.class.php:
	CompressWhitespaceFilter added.

2007-03-09	Konstantin V. Arkhipov

	* core/Form/Filters/RussianTypograph.class.php: now uses internal
	filter's chain too: Trim + CompressWhitespace.

	* core/OSQL/SQLFunction.class.php: MappableObject implemented.

2007-03-07	Konstantin V. Arkhipov

	* core/, main/: all childless classes are final now.

	* main/Base/DateRange.class.php: now accepts Date object's.

2007-03-07	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: method for getting symmetric array
	from values.

	* core/Form/Primitive.class.php,
	core/Form/Primitives/PrimitivePlainList.class.php: plainChoice() for
	simple plain arrays.

2007-03-06	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: cascade fetch strategy
	also forced for spooked properties.
