@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2006 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2004-2007 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -64,8 +64,8 @@
 				$this->set($field, $object->toString());
 			elseif ($object instanceof Range)
 				$this->
-					set("{$field}_min", $object->getMin())->
-					set("{$field}_max", $object->getMax());
+					set($field.'_min', $object->getMin())->
+					set($field.'_max', $object->getMax());
 			elseif ($object === null)
 				$this->set($field, null);
 			else
